true spacing tokens, fixed media *-up size variant option

--- a/blocks/media/media.css
+++ b/blocks/media/media.css
@@ -1,21 +1,6 @@
-
-:root {
-  --padding-s: 40px;
-  --padding-m: 48px;
-  --padding-l: 52px;
-  --gap-xs: 24px;
-  --gap-s: 32px;
-  --gap-m: 40px;
-  --gap-l: 56px;
-}
-
 .media {
   margin: 0 auto;
   position: relative;
-}
-
-.media.dark {
-  color: #fff;
 }
 
 .media .background {
@@ -44,12 +29,11 @@
     display: flex;
     align-items: center;
     justify-content: stretch;
-    gap:  var(--gap-xs);
-    padding: var(--spacing-m) 0;
+    gap:  var(--spacing-s);
+    padding: var(--spacing-s) 0;
     position: relative;
     flex-direction: column;
 }
-
 
 .media.media-reverse-mobile .foreground .media-row {
     flex-direction: column-reverse;
@@ -60,45 +44,45 @@
 }
 
 .media .text .detail-M {
-  margin-bottom: var(--spacing-xs);
+  margin-bottom: var(--spacing-xxs);
 }
 
 .media .text .detail-L {
-  margin-bottom: var(--spacing-s);
+  margin-bottom: var(--spacing-xs);
 }
 
 .media .text .heading-XS,
 .media .text .heading-S {
-  margin-bottom: var(--spacing-xs);
+  margin-bottom: var(--spacing-xxs);
 }
 
 .media .text .heading-M {
-  margin-bottom: var(--spacing-xs);
+  margin-bottom: var(--spacing-xxs);
 }
 
 .media .text .heading-L,
 .media .text .heading-XL {
-  margin-bottom: var(--spacing-s);
+  margin-bottom: var(--spacing-m);
 }
 
 .media .text .body-S,
 .media .text .body-M {
-  margin-bottom: var(--spacing-s);
+  margin-bottom: var(--spacing-xs);
 }
 
 .media .text img {
-  max-height: 56px;
+  max-height: var(--spacing-xl);
 }
 
 .media .text .action-area {
   display: flex;
   margin: 0;
-  gap: var(--spacing-s);
+  gap: var(--spacing-xs);
 }
 
 .text .product-area {
-  margin: 0 0 var(--spacing-m) 0;
-  gap: var(--spacing-xs) var(--spacing-s);
+  margin: 0 0 var(--spacing-s) 0;
+  gap: var(--spacing-xs);
   display: grid;
   grid-template-columns: 1fr;
 }
@@ -121,7 +105,7 @@
 }
 
 .text .icon img{
-  padding-right: 12px;
+  padding-right: var(--spacing-xxs);
 }
 
 .dark .text .icon,
@@ -134,29 +118,26 @@
   width: 100%;
 }
 
-/* Media multiple two-up, three-up, four-up*/
 .media[class*="-up"] .foreground {
   max-width: var(--grid-container-width);
   margin: 0 auto;
-  padding: var(--spacing-m) 0;
+  padding: var(--spacing-s) 0;
   position: relative;
 }
 .media[class*="-up"] .foreground > .media-row {
   width: 100%;
   display: block;
   max-width: 100%;
-  padding-bottom: var(--spacing-l);
 }
 .media[class*="-up"] .foreground > .media-row > div:first-of-type {
   margin-right: 0;
-  margin-bottom: var(--spacing-m);
+  margin-bottom: var(--spacing-s);
 }
 
 @media screen and (min-width: 600px) {
 
-  /*media row gap*/
   .media > .foreground .media-row {
-    gap: var(--gap-s);
+    gap: var(--spacing-m);
     flex-direction: row;
     max-width: var(--block-container-width-s);
   }
@@ -173,9 +154,10 @@
     max-width: var(--block-container-width-l);
   }
 
-  .media.large > .foreground .media-row .text { width: 50%; }
+  .media.large > .foreground .media-row .text,
   .media.large > .foreground .media-row .image { width: 50%; }
-
+  .media[class*="-up"].large > .foreground .media-row .text,
+  .media[class*="-up"].large > .foreground .media-row .image { width: 100%; }
   .media.media--reversed .foreground .media-row > div:first-child {
     order: 2;
   }
@@ -185,7 +167,6 @@
     grid-template-columns: 1fr 1fr;
   }
 
-  /* Media multiple */
   .media[class*="-up"] .foreground > div.media-row {
     padding: 0;
   }
@@ -194,21 +175,21 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
-    gap: var(--spacing-ml);
+    gap: var(--spacing-m);
   }
 
   .media.three-up .foreground {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
-    gap: var(--spacing-ml);
+    gap: var(--spacing-m);
   }
 
   .media.four-up .foreground {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
-    gap: var(--spacing-ml);
+    gap: var(--spacing-m);
   }
 
   .media.two-up.z-pattern .foreground,
@@ -227,7 +208,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap:  var(--spacing-m);
+    gap:  var(--spacing-s);
     position: relative;
   }
 
@@ -240,7 +221,7 @@
   .media.two-up.z-pattern .foreground .media-row > div:first-of-type,
   .media.three-up.z-pattern .foreground .media-row > div:first-of-type,
   .media.four-up.z-pattern .foreground .media-row > div:first-of-type {
-    margin-right: var(--spacing-m);
+    margin-right: var(--spacing-s);
     margin-bottom: 0;
   }
 
@@ -252,33 +233,31 @@
 
 }
 
-
 @media screen and (min-width: 800px) {
   .media > .foreground .media-row {
     margin: 0 auto;
   }
 }
+
 @media screen and (min-width: 1000px) {
   .media.large > .foreground .media-row {
-    margin: 0 var(--spacing-m);
+    margin: 0 var(--spacing-s);
   }
   .media.two-up .foreground {
     max-width: var(--block-container-width-m);
   }
 }
-@media screen and (min-width: 1200px) {
 
-  /*media row gap*/
+@media screen and (min-width: 1200px) {
   .media.medium > .foreground .media-row {
-    gap: var(--gap-m);
+    gap: var(--spacing-l);
   }
   .media.large > .foreground .media-row {
-    gap: var(--gap-l);
+    gap: var(--spacing-xl);
     margin: 0 auto;
   }
   .media.large > .foreground .media-row .image { min-width: 700px; }
-
-  /* *-up */
+  .media[class*="-up"].large > .foreground .media-row .image { min-width: 100%; }
   .media.three-up .foreground { grid-template-columns: repeat(3, 1fr); }
   .media.four-up .foreground { grid-template-columns: repeat(4, 1fr); }
 }
