--- a/blocks/z-pattern/z-pattern.css
+++ b/blocks/z-pattern/z-pattern.css
@@ -2,20 +2,20 @@
 @import '../media/media.css';
 
 .z-pattern {
-  padding: 80px 0;
+  padding: var(--spacing-xxl) 0;
 }
 .z-pattern .heading-row {
     text-align: center;
     margin: 0 auto;
 }
 .z-pattern .heading-row .headline {
-  margin: 0 0 var(--spacing-s);
+  margin: 0 0 var(--spacing-xs);
 }
 .z-pattern .heading-row p {
-  margin: 0 0 var(--spacing-s);
+  margin: 0 0 var(--spacing-xs);
 }
 .z-pattern .media > .foreground .media-row {
-  padding: 40px 0;
+  padding: var(--spacing-l) 0;
 }
 .z-pattern .media:last-of-type > .foreground .media-row {
   padding-bottom: 0;
