--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,13 +67,14 @@
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
   /* Spacing */
-  --spacing-xs: 8px;
-  --spacing-s: 16px;
-  --spacing-m: 24px;
-  --spacing-ml: 32px;
-  --spacing-l: 48px;
+  --spacing-xxs: 8px;
+  --spacing-xs: 16px;
+  --spacing-s: 24px;
+  --spacing-m: 32px;
+  --spacing-l: 40px;
   --spacing-xl: 56px;
   --spacing-xxl: 80px;
+  --spacing-xxxl: 104px;
 
   /* Grid */
   --grid-container-width: 83.4%;
@@ -96,6 +97,10 @@
 
 @media (min-width: 1200px) {
   :root {
+    --spacing-xl: 48px;
+    --spacing-xxl: 56px;
+    --spacing-xxxl: 80px;
+
     --type-heading-xxxl-size: 80px;
     --type-heading-xxxl-lh: 88px;
     --type-heading-xxl-size: 44px;
@@ -149,8 +154,8 @@ h1, h2, h3,
 h4, h5, h6 {
   font-weight: 600;
   line-height: 1.25;
-  margin-top: var(--spacing-s);
-  margin-bottom: var(--spacing-xs);
+  margin-top: var(--spacing-xs);
+  margin-bottom: var(--spacing-xxs);
 }
 
 h1 { font-size: var(--type-heading-xxl-size); }
@@ -161,8 +166,8 @@ h5 { font-size: var(--type-heading-s-size); }
 h6 { font-size: var(--type-heading-xs-size); }
 
 p, dl, ol, ul, pre, blockquote {
-  margin-top: var(--spacing-s);
-  margin-bottom: var(--spacing-s);
+  margin-top: var(--spacing-xs);
+  margin-bottom: var(--spacing-xs);
 }
 
 code, pre, samp {
